--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: "3.9"
    
 services:
+  postgres:
+    image: postgres:12
+    env_file:
+      - './infrastucture/services/postgres/.env'
+  django:
+    build: ./backend
+    command: "python manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - ./backend:/app/api
+    env_file:
+      - './infrastucture/services/postgres/.env'
+      - './infrastucture/apps/backend/.env'
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
