--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,18 @@ services:
     env_file:
       - './infrastucture/services/postgres/.env'
       - './infrastucture/apps/backend/.env'
-  web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - .:/code
     ports:
       - "8000:8000"
+    depends_on:
+      - postgres
+  frontend:
+    build: ./frontend
+    command: "npm run start"
+    volumes:
+      - ./frontend:/app/frontend
+      - node-modules:/app/frontend/node_modules
+    ports:
+      - "3000:3000"
+
+volumes:
+  node-modules:
