--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ Django==4.0.5
 django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.13.1
+gunicorn==20.1.0
 psycopg2==2.9.3
 pytz==2022.1
 sqlparse==0.4.2
