--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,9 +3,10 @@ upstream backend {
 }
 
 server {
-    server_name mondinotracker.com;
-
     listen 80;
+    server_name mondinotracker.com;
+    server_tokens off;
+    client_max_body_size 20M;
 
     location / {
         root   /usr/share/nginx/html;
