--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ upstream backend {
 
 server {
     listen 80;
-    server_name mondinotracker.com;
+    server_name www.mondinotracker.com;
     server_tokens off;
     client_max_body_size 20M;
 
