--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,15 +19,26 @@ services:
     depends_on:
       - postgres
   nginx:
+    restart: unless-stopped
     build:
       context: .
       dockerfile: ./nginx/dockerfile
     volumes:
       - static_volume:/static
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     ports:
       - 80:80
+      - 443:443
     depends_on: 
       - django
+  certbot:
+    restart: unless-stopped
+    container_name: certbot
+    image: certbot/certbot
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
   # frontend:
   #   build: ./frontend
   #   command: "npm run start"
