--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,9 +4,21 @@ upstream backend {
 
 server {
     listen 80;
+    listen 443 ssl;
     server_name www.mondinotracker.com;
+
+    ssl_certificate /etc/letsencrypt/live/mondinotracker.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/mondinotracker.com/privkey.pem;
     server_tokens off;
     client_max_body_size 20M;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    if ($server_port = 80) { set $https_redirect 1; }
+    if ($host ~ '^www\.') { set $https_redirect 1; }
+    if ($https_redirect = 1) { return 301 https://mondinotracker.com$request_uri; }
+
+    location /.well-known/acme-challenge/ { root /var/www/certbot; }
 
     location / {
         root   /usr/share/nginx/html;
