--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.33.1",
+    "react-imask": "^6.4.2",
+    "react-number-format": "^4.9.3",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
