--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,14 +5,14 @@ upstream backend {
 server {
     listen 80;
     listen 443 ssl;
-    server_name www.mondinotracker.com;
+    server_name www.mondinotracker.com mondinotracker.com;
 
     ssl_certificate /etc/letsencrypt/live/mondinotracker.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/mondinotracker.com/privkey.pem;
-    server_tokens off;
-    client_max_body_size 20M;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    server_tokens off;
+    client_max_body_size 20M;
 
     if ($server_port = 80) { set $https_redirect 1; }
     if ($host ~ '^www\.') { set $https_redirect 1; }
