--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - ./backend:/app/api
       - static_volume:/static
+      - media_volume:/media
     env_file:
       - './infrastucture/services/postgres/.env'
       - './infrastucture/apps/backend/.env'
@@ -25,6 +26,7 @@ services:
       dockerfile: ./nginx/dockerfile
     volumes:
       - static_volume:/static
+      - media_volume:/media
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     ports:
@@ -52,3 +54,4 @@ services:
 volumes:
   node-modules:
   static_volume:
+  media_volume:
