--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -98,4 +98,9 @@ server {
         autoindex on;
         alias /static/;
     }
+
+    location /django_media/ {
+        autoindex on;
+        alias /media/;
+    }
 }
