--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,16 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
+bleach==5.0.1
 Django==4.0.5
 django-cors-headers==3.13.0
 django-environ==0.9.0
+django-summernote==0.8.20.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
+Pillow==9.2.0
 psycopg2==2.9.3
 pytz==2022.1
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
+webencodings==0.5.1
