--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -84,6 +84,9 @@ server {
     location /admin {
         try_files $uri @proxy_api;
     }
+    location /summernote {
+        try_files $uri @proxy_api;
+    }
 
     location @proxy_api {
         proxy_set_header X-Forwarded-Proto https;
