--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -3,17 +3,16 @@
 FROM node as build
 
 WORKDIR /app/frontend
-COPY ./frontend/package.json ./
-COPY ./frontend/package-lock.json ./
-RUN npm ci --silent
-COPY ./frontend/ ./
+COPY package*.json /app/frontend
+RUN npm install
+COPY ./ /app/frontend
 RUN npm run build
 
 # The second stage
 # Copy React static files and start nginx
 FROM nginx:1.22-alpine
 
-COPY --from=build /app/frontend/build /usr/share/nginx/html
+COPY --from=build /app/frontend/build/ /usr/share/nginx/html
 
 
 RUN rm /etc/nginx/conf.d/default.conf
