--- a/nginx/dockerfile
+++ b/nginx/dockerfile
@@ -3,8 +3,8 @@
 FROM node as build
 
 WORKDIR /app/frontend
-COPY package.json /app/frontend
-COPY package-lock.json /app/frontend
+COPY ./frontend/package.json /app/frontend
+COPY ./frontend/package-lock.json /app/frontend
 RUN npm install
 COPY ./ /app/frontend
 RUN npm run build
